<resources>
    <string name="app_name">MyToDoList</string>
    <string name="to_do_list">To-Do-List</string>
    <string name="ajouter_une_tache">Ajouter une tâche</string>
    <string name="ajouter_une_categorie">Ajouter une catégorie</string>
    <string name="a_propos">A propos</string>
    <string name="parametres">Paramètres</string>
    <string name="home">home</string>
    <string name="description_application">MyToDoList est une application de gestion de tâches intuitive et personnalisable.</string>
    <string name="fonctionnalites">Fonctionnalités principales :</string>
    <string name="liste_fonctionnalites">• Gestion de tâches par catégories\n• Marquage des tâches comme terminées\n• Modification et suppression des tâches\n• Mode sombre personnalisable\n• Synchronisation avec Firebase\n• Comptes utilisateurs personnalisés</string>
    <string name="technologies_utilisees">Technologies utilisées :</string>
    <string name="liste_technologies">• Firebase Realtime Database\n• Material Design Components\n• SharedPreferences\n• RecyclerView avec adaptateurs personnalisés\n• Fragments dynamiques</string>
    <string name="developpeur">Développé par :</string>
    <string name="info_developpeur">Étudiant en Bachelor 3 Informatique à Ynov</string>
    <string name="le_chat">EL GATO</string>
</resources>