<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Ligne du titre et des boutons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/homeButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                app:icon="@drawable/rounded_checklist_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/teal_200"
                app:strokeColor="@color/teal_200"
                android:contentDescription="@string/home" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/aboutButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                app:icon="@drawable/rounded_info_i_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/teal_200"
                app:strokeColor="@color/teal_200"
                android:contentDescription="@string/a_propos" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/rounded_settings_24"
        android:layout_marginBottom="8dp"
        app:tint="@color/teal_200"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/parametres" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout2"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- CARD VIEW COMPTE -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Compte"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/textViewCurrentUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Utilisateur actuel : "
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:padding="8dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/logoutButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Déconnexion"
                        android:textColor="@color/black"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_margin="8dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/deleteAccountButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Supprimer le compte"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/design_default_color_error"
                        android:layout_margin="8dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- CARD VIEW PREFERENCES -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Préférences"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp"
                        android:gravity="center" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchDarkMode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mode sombre"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:padding="8dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout> 